[package]
authors = ["clubby789 <jamie@hill-daniel.co.uk>"]
description = "An implementation of Pwntools written in Rust."
documentation = "https://docs.rs/pwn/latest/pwn"
edition = "2021"
homepage = "https://github.com/clubby789/pwntools"
include = ["src/**/*", "README.md"]
license = "MIT"
name = "pwn"
readme = "README.md"
repository = "https://github.com/clubby789/pwntools"
version = "0.3.0"

[dependencies]
byteorder = "1.4.3"
colored = "2.0.0"
crossbeam = "0.8.2"
crossbeam-utils = "0.8.7"
ctor = "0.1.21"
duplicate = "0.4.0"
goblin = {version = "0.6.1", optional = true, features = ["elf32", "elf64", "endian_fd"], default_features = false}
memmap = {version = "0.7.0", optional = true}
nix = "0.26.2"
num-traits = "0.2.14"
once_cell = "1.9.0"
regex = "1.7.1"
rustyline = {version = "11.0.0", optional = true}
tracing = "0.1.32"
tracing-subscriber = "0.3.9"

[features]
default = ["tubes", "elf"]
elf = ["goblin", "memmap"]
tubes = ["rustyline"]
